--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 .block{
-    height: 20px;
-    width: 20px;
     border: 1px solid black;
 }
 
 .grid{
     display: flex;
     border: 1px solid black;
+    width: 500px;
+    height: 500px;
 }
 
 .grid-container{
@@ -28,4 +28,30 @@
     justify-content: top;
     gap: 10px;
 }
+
+.buttons button{
+    padding: 10px 20px;
+    color: white;
+    background-color: rgb(43, 135, 255);
+    border: 0px;
+    /*border: 2px solid rgb(0, 81, 255);*/
+    box-shadow: 3px 3px 2px rgb(0, 81, 255);
+}
+
+.buttons button.clicked{
+    transform: scale(0.95);
+    transition: transform 0.3s ease-in-out;
+    background-color: rgb(206, 43, 255);
+    box-shadow: 5px 5px 3px rgb(140, 0, 255);
+}
+
+.slider-container{
+    padding: 40px 0px;
+}
+
+.slider-value{
+    display: flex;
+    justify-content: center;
+}
+
 
